fixed default ship loading