@@ -1,14 +1,14 @@
 /**
- * Copyright 2014 
+ * Copyright 2014
  * SMEdit https://github.com/StarMade/SMEdit
  * SMTools https://github.com/StarMade/SMTools
- *
+ * <p>
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
  * the License at
- *
+ * <p>
  * http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
@@ -17,33 +17,22 @@
  */
 package smc.smedit.util;
 
-import java.awt.Image;
-import java.awt.Toolkit;
-import java.io.BufferedWriter;
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
-import java.io.Writer;
+import smc.smedit.log.LogFormatter;
+import smc.smedit.log.SystemConsoleHandler;
+import smc.smedit.log.TextAreaLogHandler;
+
+import java.awt.*;
+import java.io.*;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Properties;
 import java.util.logging.FileHandler;
 import java.util.logging.Level;
 import java.util.logging.LogManager;
 import java.util.logging.Logger;
-
-import javax.imageio.ImageIO;
-
-import smc.smedit.log.LogFormatter;
-import smc.smedit.log.SystemConsoleHandler;
-import smc.smedit.log.TextAreaLogHandler;
 
 
 /**
@@ -54,21 +43,19 @@ import smc.smedit.log.TextAreaLogHandler;
 @SuppressWarnings({"CallToPrintStackTrace", "null"})
 public class GlobalConfiguration {
 
-    private static final Logger log = Logger.getLogger(GlobalConfiguration.class.getName());
-
     public static final String NAME = "SMEdit";
-    public static final String NAME_LOWERCASE = NAME.toLowerCase();
-    public static final String SITE_NAME = "Lazygamerz";
+    public static final String VERSION = "3.0.0"; //Todo: Move to some sort of config file idk
+    private static final Logger log = Logger.getLogger(GlobalConfiguration.class.getName());
     private static final OperatingSystem CURRENT_OS;
-    private static boolean RUNNING_FROM_JAR = false;
+    private static boolean RUNNING_FROM_JAR;
 
     static {
-        final URL resource = GlobalConfiguration.class.getClassLoader().getResource(Resources.SVERSION);
+        URL resource = GlobalConfiguration.class.getClassLoader().getResource(Resources.SVERSION);
         if (resource != null) {
-            GlobalConfiguration.setRUNNING_FROM_JAR(true);
+            setRUNNING_FROM_JAR(true);
 
         }
-        final String os = System.getProperty("os.name");
+        String os = System.getProperty("os.name");
         if (os.contains("Mac")) {
             CURRENT_OS = OperatingSystem.MAC;
         } else if (os.contains("Windows")) {
@@ -79,13 +66,10 @@ public class GlobalConfiguration {
             CURRENT_OS = OperatingSystem.UNKNOWN;
         }
 
-        if (GlobalConfiguration.isRUNNING_FROM_JAR()) {
+        if (isRUNNING_FROM_JAR()) {
             String path;
             path = resource.toString();
-            try {
-                path = URLDecoder.decode(path, "UTF-8");
-            } catch (final UnsupportedEncodingException ignored) {
-            }
+            path = URLDecoder.decode(path, StandardCharsets.UTF_8);
             final String prefix = "jar:file:/";
             if (path.indexOf(prefix) == 0) {
                 path = path.substring(prefix.length());
@@ -94,16 +78,15 @@ public class GlobalConfiguration {
                     path = path.replace('/', File.separatorChar);
                 }
                 try {
-                    final File pathfile = new File(Paths.getPathCache());
+                    File pathfile = new File(Paths.getPathCache());
                     if (pathfile.exists()) {
                         pathfile.delete();
                     }
                     pathfile.createNewFile();
-                    try (Writer out = new BufferedWriter(new FileWriter(
-                            Paths.getPathCache()))) {
+                    try (Writer out = new BufferedWriter(new FileWriter(Paths.getPathCache(), StandardCharsets.UTF_8))) {
                         out.write(path);
                     }
-                } catch (final IOException e) {
+                } catch (IOException e) {
                     e.printStackTrace();
                 }
             }
@@ -111,7 +94,7 @@ public class GlobalConfiguration {
     }
 
     public static void createDirectories() {
-        final ArrayList<String> dirs;
+        ArrayList<String> dirs;
         dirs = new ArrayList<>(11);
         dirs.add(Paths.getHomeDirectory());
         dirs.add(Paths.getResourceDirectory());
@@ -122,10 +105,11 @@ public class GlobalConfiguration {
         dirs.add(Paths.getShapeLibraryDirectory());
         dirs.add(Paths.getCacheDirectory());
         dirs.add(Paths.getSettingsDirectory());
-        dirs.add(Paths.getIsanthDirectory());
-        dirs.add(Paths.getIsanthDataDirectory());   
-        for (final String name : dirs) {
-            final File dir = new File(name);
+        // NOTE: deliberately not creating a blueprint folder here — the old code
+        // created an empty "Omen-Navy-Class" blueprint in the install's
+        // blueprints-default, which then loaded as a broken default ship.
+        for (String name : dirs) {
+            File dir = new File(name);
             if (!dir.exists() && !dir.mkdirs()) {
                 log.log(Level.WARNING, "Could not create application directory: {0}", dir);
             }
@@ -133,14 +117,13 @@ public class GlobalConfiguration {
     }
 
     public static OperatingSystem getCurrentOperatingSystem() {
-        return GlobalConfiguration.CURRENT_OS;
+        return CURRENT_OS;
     }
 
-    public static Image getImage(final String resource) {
+    public static Image getImage(String resource) {
         try {
-            return Toolkit.getDefaultToolkit().getImage(
-                    getResourceURL(resource));
-        } catch (final MalformedURLException e) {
+            return Toolkit.getDefaultToolkit().getImage(getResourceURL(resource));
+        } catch (MalformedURLException e) {
         }
         return null;
     }
@@ -151,49 +134,26 @@ public class GlobalConfiguration {
      * @return
      * @throws MalformedURLException
      */
-    public static URL getResourceURL(final String path)
-            throws MalformedURLException {
-        return isRUNNING_FROM_JAR() ? GlobalConfiguration.class.getResource(path)
-                : new File(path).toURI().toURL();
-    }
-
-    public static int getVersion() {
-        try {
-            final InputStream is = isRUNNING_FROM_JAR() ? GlobalConfiguration.class.getClassLoader().getResourceAsStream(Resources.SVERSION) : new FileInputStream(Paths.SVERSION);
-
-            int off = 0;
-            final byte[] b = new byte[2];
-            while ((off += is.read(b, off, 2 - off)) != 2) {
-            }
-
-            return ((0xFF & b[0]) << 8) + (0xFF & b[1]);
-        } catch (final IOException e) {
-            
-        }
-        return -1;
+    public static URL getResourceURL(String path) throws MalformedURLException {
+        return RUNNING_FROM_JAR ? GlobalConfiguration.class.getResource(path) : new File(path).toURI().toURL();
     }
 
     public static void registerLogging() {
-        final Properties logging = new Properties();
-        final String logFormatter = LogFormatter.class.getCanonicalName();
-        final String fileHandler = FileHandler.class.getCanonicalName();
-        logging.setProperty("handlers",
-                TextAreaLogHandler.class.getCanonicalName() + "," + fileHandler);
+        Properties logging = new Properties();
+        String logFormatter = LogFormatter.class.getCanonicalName();
+        String fileHandler = FileHandler.class.getCanonicalName();
+        logging.setProperty("handlers", TextAreaLogHandler.class.getCanonicalName() + "," + fileHandler);
         logging.setProperty(".level", "CONFIG");
-        logging.setProperty(SystemConsoleHandler.class.getCanonicalName()
-                + ".formatter", logFormatter);
+        logging.setProperty(SystemConsoleHandler.class.getCanonicalName() + ".formatter", logFormatter);
         logging.setProperty(fileHandler + ".formatter", logFormatter);
-        logging.setProperty(TextAreaLogHandler.class.getCanonicalName()
-                + ".formatter", logFormatter);
-        logging.setProperty(fileHandler + ".pattern", Paths.getLogsDirectory()
-                + File.separator + "%u.%g.log");
+        logging.setProperty(TextAreaLogHandler.class.getCanonicalName() + ".formatter", logFormatter);
+        logging.setProperty(fileHandler + ".pattern", Paths.getLogsDirectory() + File.separator + "%u.%g.log");
         logging.setProperty(fileHandler + ".count", "10");
-        final ByteArrayOutputStream logout = new ByteArrayOutputStream();
+        ByteArrayOutputStream logout = new ByteArrayOutputStream();
         try {
             logging.store(logout, "");
-            LogManager.getLogManager().readConfiguration(
-                    new ByteArrayInputStream(logout.toByteArray()));
-        } catch (final IOException | SecurityException ignored) {
+            LogManager.getLogManager().readConfiguration(new ByteArrayInputStream(logout.toByteArray()));
+        } catch (IOException | SecurityException ignored) {
         }
     }
 
@@ -210,6 +170,6 @@ public class GlobalConfiguration {
     public static void setRUNNING_FROM_JAR(boolean aRUNNING_FROM_JAR) {
         RUNNING_FROM_JAR = aRUNNING_FROM_JAR;
     }
-    
-    
+
+
 }
